--- a/index.html
+++ b/index.html
@@ -1,18 +1,175 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie Recommender</title>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.12.0/dist/tf.min.js"></script>
-    <script src="script.js" defer></script>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Recommender System</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
-<body>
-    <h1>Movie Recommender</h1>
-    <div id="status">Loading...</div>
-    <progress id="progress-bar" value="0" max="100"></progress>
-    <div id="plot" class="centered-plot"></div>
+
+<body class="bg-secondary" data-bs-theme="light">
+
+    <!-- As a heading -->
+    <nav class="navbar bg-dark">
+        <div class="container">
+            <span class="navbar-brand mb-0 h1 text-light">Recommender System</span>
+        </div>
+    </nav>
+
+
+    <div class="container text-center">
+
+        <div class="row">
+            <div id="status" class="text-center">Loading...</div>
+            <div class="progress">
+                <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-xl-2 col-lg-3 col-md-4 col-sm-12 mt-3">
+
+
+                <div class="card">
+                    <div class="card-header">
+                        Configuración
+                    </div>
+                    <div class="d-grid gap-2 col-10 mt-3 mb-3 mx-auto">
+                        <div class="form-check mr-3 ml-3">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+                            <label class="form-check-label" for="flexCheckChecked">
+                                Semilla aleatoria
+                            </label>
+                        </div>
+                        <div class="input-group">
+                            <span class="input-group-text" id="emb-size" data-bs-toggle="tooltip"
+                                data-bs-title="Tamaño embedding">K</span>
+                            <input type="number" class="form-control" value="5" max="10" min="2">
+                        </div>
+
+                        <div class="input-group">
+                            <span class="input-group-text" id="regularizer" data-bs-toggle="tooltip"
+                                data-bs-title="Regularizador">μ</span>
+                            <input type="number" class="form-control" value="0.01" max="0.1" min="0.0001" step="0.0001">
+                        </div>
+
+                        <hr class="">
+
+                        <div class="input-group">
+                            <span class="input-group-text" id="n-epochs" data-bs-toggle="tooltip"
+                                data-bs-title="Número de epochs">Epochs</span>
+                            <input type="number" class="form-control" value="100" max="1000" min="1" step="1">
+                        </div>
+
+                        <div class="input-group">
+                            <span class="input-group-text" id="batch-size" data-bs-toggle="tooltip"
+                                data-bs-title="Tamaño del batch">Batch</span>
+                            <input type="number" class="form-control" value="32" max="1024" min="8" step="8">
+                        </div>
+
+                        <div class="input-group">
+                            <span class="input-group-text" id="learning-rate" data-bs-toggle="tooltip"
+                                data-bs-title="Learning rate">L-Rate</span>
+                            <input type="number" class="form-control" value="0.01" max="0.1" min="0.0001" step="0.0001">
+                        </div>
+
+
+                        <hr class="">
+
+                        <div class="btn-group" role="group" aria-label="Basic mixed styles example">
+                            <button id="btn-start" type="button" class="btn btn-danger"><i class="bi bi-stop-fill m-2"></i></button>
+                            <button id="btn-stop" type="button" class="btn btn-success"><i class="bi bi-play-fill m-2"></i></button>
+                        </div>
+                        <button type="button" class="btn btn-secondary"><i class="bi bi-arrow-clockwise m-2"></i></button>
+                        <hr class="">
+                        <button type="button" class="btn btn-warning"><i class="bi bi-trash3 m-2"></i>Borrar
+                            puntos</button>
+                    </div>
+                </div>
+
+
+            </div>
+            <div class="col-xl-10 col-lg-9 col-md-8 col-sm-12">
+                <div class="row">
+                    <div class="col-sm-12 col-xl-6  mt-3">
+                        <div class="card" style="background: white;">
+                            <div class="card-header">
+                                Embeddings
+                            </div>
+                            <div class="mb-2">
+                                <div class="ratio ratio-1x1">
+                                    <div id="emb-plot"></div>
+                                </div>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="col-sm-12 col-xl-6  mt-3">
+                        <div class="card" style="background: white;">
+                            <div class="card-header">
+                                Evolución entrenamiento
+                            </div>
+                            <div class="mb-2">
+                                <div class="ratio ratio-1x1">
+                                    <div id="loss-plot"></div>
+                                </div>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-xl-6 mt-3">
+                        <div class="ratio ratio-1x1">
+                            <div class="card ">
+                                <div class="card-header">
+                                    Consola
+                                </div>
+                                Level 2: .col-8 .col-sm-6
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-xl-6 mt-3">
+                        <div class="ratio ratio-1x1">
+                            <div class="card ">
+                                <div class="card-header">
+                                    Puntuaciones
+                                </div>
+                                Level 2: .col-8 .col-sm-6
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+
+    </div>
+
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.12.0/dist/tf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="script.js" defer></script>
+
+
+    <script>
+        const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
+        const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
+    </script>
+
+    <style>
+        span.input-group-text {
+            cursor: help;
+        }
+        .card-header{
+            background-color: rgb(33 37 41 / 13%) !important
+        }
+    </style>
+
 </body>
+
 </html>
