--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
 
-<body class="bg-secondary" data-bs-theme="light">
+<body class="bg-secondary mb-5" data-bs-theme="light">
 
     <!-- As a heading -->
     <nav class="navbar bg-dark">
@@ -79,12 +79,12 @@
                         <hr class="">
 
                         <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                            <button id="btn-start" type="button" class="btn btn-danger"><i class="bi bi-stop-fill m-2"></i></button>
-                            <button id="btn-stop" type="button" class="btn btn-success"><i class="bi bi-play-fill m-2"></i></button>
+                            <button id="btn-stop" type="button" class="btn btn-danger" disabled><i class="bi bi-stop-fill m-2"></i></button>
+                            <button id="btn-start" type="button" class="btn btn-success" disabled ><i class="bi bi-play-fill m-2"></i></button>
                         </div>
-                        <button type="button" class="btn btn-secondary"><i class="bi bi-arrow-clockwise m-2"></i></button>
+                        <button type="button" class="btn btn-secondary" disabled><i class="bi bi-arrow-clockwise m-2"></i></button>
                         <hr class="">
-                        <button type="button" class="btn btn-warning"><i class="bi bi-trash3 m-2"></i>Borrar
+                        <button type="button" class="btn btn-warning" disabled><i class="bi bi-trash3 m-2"></i>Borrar
                             puntos</button>
                     </div>
                 </div>
@@ -125,7 +125,8 @@
                                 <div class="card-header">
                                     Consola
                                 </div>
-                                Level 2: .col-8 .col-sm-6
+                                <textarea id="console" class="m-2" style="height: 100%;">
+                                </textarea>
                             </div>
                         </div>
                     </div>
