--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Recommender System</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="bg-secondary mb-5" data-bs-theme="light">
@@ -22,23 +23,14 @@
     <div class="container text-center">
 
         <div class="row">
-            <div id="status" class="text-center">Loading...</div>
-            <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-        </div>
-
-        <div class="row">
             <div class="col-xl-2 col-lg-3 col-md-4 col-sm-12 mt-3">
-
-
                 <div class="card">
                     <div class="card-header">
                         Configuración
                     </div>
                     <div class="d-grid gap-2 col-10 mt-3 mb-3 mx-auto">
                         <div class="form-check mr-3 ml-3">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+                            <input class="form-check-input" type="checkbox" value="" id="random-seed" checked>
                             <label class="form-check-label" for="flexCheckChecked">
                                 Semilla aleatoria
                             </label>
@@ -79,10 +71,13 @@
                         <hr class="">
 
                         <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                            <button id="btn-stop" type="button" class="btn btn-danger" disabled><i class="bi bi-stop-fill m-2"></i></button>
-                            <button id="btn-start" type="button" class="btn btn-success" disabled ><i class="bi bi-play-fill m-2"></i></button>
+                            <button id="btn-stop" type="button" class="btn btn-danger" disabled><i
+                                    class="bi bi-stop-fill m-2"></i></button>
+                            <button id="btn-start" type="button" class="btn btn-success" disabled><i
+                                    class="bi bi-play-fill m-2"></i></button>
                         </div>
-                        <button type="button" class="btn btn-secondary" disabled><i class="bi bi-arrow-clockwise m-2"></i></button>
+                        <button type="button" class="btn btn-secondary" disabled><i
+                                class="bi bi-arrow-clockwise m-2"></i></button>
                         <hr class="">
                         <button type="button" class="btn btn-warning" disabled><i class="bi bi-trash3 m-2"></i>Borrar
                             puntos</button>
@@ -92,6 +87,21 @@
 
             </div>
             <div class="col-xl-10 col-lg-9 col-md-8 col-sm-12">
+
+                <div class="col-sm-12 mt-3">
+                    <div class="card ">
+                        <div class="card-header">
+                            Consola
+                        </div>
+                        <textarea id="console" class=" mt-2" style="width: 100%; min-height:60px; overflow:hidden"></textarea>
+                        <div class="progress m-2">
+                            <div class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+
+                </div>
+
+
                 <div class="row">
                     <div class="col-sm-12 col-xl-6  mt-3">
                         <div class="card" style="background: white;">
@@ -102,8 +112,8 @@
                                 <div class="ratio ratio-1x1">
                                     <div id="emb-plot"></div>
                                 </div>
+                            </div>
                         </div>
-                    </div>
                     </div>
                     <div class="col-sm-12 col-xl-6  mt-3">
                         <div class="card" style="background: white;">
@@ -114,24 +124,13 @@
                                 <div class="ratio ratio-1x1">
                                     <div id="loss-plot"></div>
                                 </div>
-                        </div>
-                    </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-12 col-xl-6 mt-3">
-                        <div class="ratio ratio-1x1">
-                            <div class="card ">
-                                <div class="card-header">
-                                    Consola
-                                </div>
-                                <textarea id="console" class="m-2" style="height: 100%;">
-                                </textarea>
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-xl-6 mt-3">
-                        <div class="ratio ratio-1x1">
+                </div>
+                <div class="row">
+                    <div class="col-12 mt-3">
+                        <div class="ratio ratio-16x9">
                             <div class="card ">
                                 <div class="card-header">
                                     Puntuaciones
@@ -156,20 +155,10 @@
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="script.js" defer></script>
 
-
     <script>
         const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
         const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl))
     </script>
-
-    <style>
-        span.input-group-text {
-            cursor: help;
-        }
-        .card-header{
-            background-color: rgb(33 37 41 / 13%) !important
-        }
-    </style>
 
 </body>
 
