--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
                         <div class="card-header">
                             Consola
                         </div>
-                        <textarea id="console" class=" mt-2"
-                            style="width: 100%; min-height:60px; overflow:hidden"></textarea>
+                        <textarea id="console" class=" mt-2" style="width: 100%; min-height:60px; overflow:hidden"></textarea>
                         <div class="progress mx-2 mb-1 mt-2">
                             <div id="batch-pgb" class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
