--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Recommender System</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link href="https://cdn.datatables.net/v/bs4/dt-2.0.8/r-3.0.2/datatables.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -138,7 +139,7 @@
                                 <div class="row">
                                     <div class="col mx-3 mb-3">
                                         <div class="table-container">
-                                            <table class="table mt-3 table-striped align-middle">
+                                            <table id="new-user-table" class="table mt-3 table-striped align-middle dataTable">
                                                 <thead>
                                                     <tr>
                                                         <th scope="col">#</th>
@@ -147,7 +148,7 @@
                                                         <th scope="col">Predicción</th>
                                                     </tr>
                                                 </thead>
-                                                <tbody id="new-user-table">
+                                                <tbody id="new-user-table-content">
                                                     <!-- Filas de películas se añadirán aquí -->
                                                 </tbody>
                                             </table>
@@ -170,6 +171,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.12.0/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.datatables.net/v/bs4/dt-2.0.8/r-3.0.2/datatables.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="script.js" defer></script>
 
