--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Recommender System</title>
+    <link href="https://cdn.datatables.net/v/bs5/dt-2.0.8/r-3.0.2/datatables.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link href="https://cdn.datatables.net/v/bs4/dt-2.0.8/r-3.0.2/datatables.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -123,10 +123,10 @@
                     <div class="col-12 mt-3">
                             <div class="card">
                                 <div class="card-header">
-                                    Usuario nuevo
+                                    Crear usuario
                                 </div>
                                 <div class="row">
-                                    <div class="col-sm-6 col-lg-4 col-xl-3 my-3">
+                                    <div class="col-sm-6 col-lg-4 col-xl-3 mt-3">
                                         <div class="btn-group" role="group" aria-label="Basic mixed styles example">
                                             <button id="btn-usr-load" type="button" class="btn btn-outline-primary"><i class="bi bi-cloud-upload m-2"></i></button>
                                             <button id="btn-usr-save" type="button" class="btn btn-outline-primary"><i class="bi bi-download m-2"></i></button>
@@ -135,24 +135,22 @@
 
                                     </div>
                                 </div>
-                
+                                <hr>
                                 <div class="row">
                                     <div class="col mx-3 mb-3">
-                                        <div class="table-container">
-                                            <table id="new-user-table" class="table mt-3 table-striped align-middle dataTable">
-                                                <thead>
-                                                    <tr>
-                                                        <th scope="col">#</th>
-                                                        <th scope="col">Puntuación</th>
-                                                        <th scope="col">Película</th>
-                                                        <th scope="col">Predicción</th>
-                                                    </tr>
-                                                </thead>
-                                                <tbody id="new-user-table-content">
-                                                    <!-- Filas de películas se añadirán aquí -->
-                                                </tbody>
-                                            </table>
-                                        </div>
+                                        <table id="new-user-table" class="table mt-3 table-striped align-middle dataTable" style="width: 100%">
+                                            <thead>
+                                                <tr>
+                                                    <th scope="col">#</th>
+                                                    <th scope="col">Puntuación</th>
+                                                    <th scope="col">Película</th>
+                                                    <th scope="col">Predicción</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody id="new-user-table-content">
+                                                <!-- Filas de películas se añadirán aquí -->
+                                            </tbody>
+                                        </table>
                                     </div>
                                 </div>
                 
@@ -167,11 +165,11 @@
     </div>
 
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.12.0/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="https://cdn.datatables.net/v/bs4/dt-2.0.8/r-3.0.2/datatables.min.js"></script>
+    <script src="https://cdn.datatables.net/v/bs5/dt-2.0.8/r-3.0.2/datatables.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="script.js" defer></script>
 
