Separar javascript en módulos

--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdn.datatables.net/v/bs5/dt-2.0.8/r-3.0.2/datatables.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <script src="script.js" defer></script>
+
+    <script type="module" src="script.js"></script>
 
 </body>
 
