Mejoras en tabla

--- a/index.html
+++ b/index.html
@@ -138,19 +138,7 @@
                                 <hr>
                                 <div class="row">
                                     <div class="col mx-3 mb-3">
-                                        <table id="new-user-table" class="table mt-3 table-striped align-middle dataTable" style="width: 100%">
-                                            <thead>
-                                                <tr>
-                                                    <th scope="col">#</th>
-                                                    <th scope="col">Puntuación</th>
-                                                    <th scope="col">Película</th>
-                                                    <th scope="col">Predicción</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody id="new-user-table-content">
-                                                <!-- Filas de películas se añadirán aquí -->
-                                            </tbody>
-                                        </table>
+                                        <table id="new-user-table" class="table mt-3 table-striped align-middle dataTable" style="width: 100%"></table>
                                     </div>
                                 </div>
                 
