--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
                         </div>
                         <div class="progress mx-2 mb-1 mt-2">
                             <div id="batch-pgb" class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-                            <medium class="justify-content-center d-flex position-absolute w-100 font-weight-bold">BATCH</medium>
+                            <medium class="justify-content-center d-flex position-absolute w-100 font-weight-bold">EPOCH</medium>
                         </div>
                         <div class="progress mx-2 mb-2">
                             <div id="epoch-pgb" class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-                            <medium class="justify-content-center d-flex position-absolute w-100 font-weight-bold">EPOCH</medium>
+                            <medium class="justify-content-center d-flex position-absolute w-100 font-weight-bold">TOTAL</medium>
                         </div>
                     </div>
                 </div>
