--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         </div>
                         <div class="input-group">
                             <span class="input-group-text" data-bs-toggle="tooltip" data-bs-title="Tamaño embedding">K</span>
-                            <input id="emb-size" type="number" class="form-control" value="2" max="10" min="2">
+                            <input id="emb-size" type="number" class="form-control" value="2" max="300" min="2">
                         </div>
 
                         <div class="input-group">
@@ -60,7 +60,7 @@
 
                         <div class="input-group">
                             <span class="input-group-text" data-bs-toggle="tooltip" data-bs-title="Learning rate">α</span>
-                            <input id="learning-rate" type="number" class="form-control" value="0.0001" max="0.1" min="0.0001" step="0.0001">
+                            <input id="learning-rate" type="number" class="form-control" value="0.0005" max="0.1" min="0.0001" step="0.0001">
                         </div>
 
                         <hr class="">
@@ -69,7 +69,7 @@
                             <button id="btn-stop" type="button" class="btn btn-danger" disabled><i class="bi bi-stop-fill m-2"></i></button>
                             <button id="btn-start" type="button" class="btn btn-success" disabled><i class="bi bi-play-fill m-2"></i></button>
                         </div>
-                        <button id="btn-reset" type="button" class="btn btn-secondary" disabled><i class="bi bi-arrow-clockwise m-2"></i></button>
+                        <!-- <button id="btn-reset" type="button" class="btn btn-secondary" disabled><i class="bi bi-arrow-clockwise m-2"></i></button> -->
                     </div>
                 </div>
 
@@ -166,6 +166,7 @@
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.12.0/dist/tf.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdn.datatables.net/v/bs5/dt-2.0.8/r-3.0.2/datatables.min.js"></script>
