Carga y descarga de puntuaciones

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                                 <hr>
                                 <div class="row">
                                     <div class="col mx-3 mb-3">
-                                        <table id="new-user-table" class="table mt-3 table-striped align-middle dataTable" style="width: 100%"></table>
+                                        <table id="new-user-table" class="table table-striped align-middle dataTable" style="width: 100%"></table>
                                     </div>
                                 </div>
                 
