--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                         Configuración
                     </div>
                     <div class="d-grid gap-2 col-10 mt-3 mb-3 mx-auto">
-                        <div class="form-check mr-3 ml-3">
+                        <!-- <div class="form-check mr-3 ml-3">
                             <input id="random-seed" class="form-check-input" type="checkbox" value=""  checked>
                             <label class="form-check-label" for="flexCheckChecked"> Semilla aleatoria </label>
-                        </div>
+                        </div> -->
                         <div class="input-group">
                             <span class="input-group-text" data-bs-toggle="tooltip" data-bs-title="Tamaño embedding">K</span>
                             <input id="emb-size" type="number" class="form-control" value="2" max="300" min="2">
