--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
     <title>Recommender System</title>
     <link href="https://cdn.datatables.net/v/bs5/dt-2.0.8/r-3.0.2/datatables.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="inc/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
     
@@ -42,7 +42,7 @@
                         </div>
 
                         <div class="input-group">
-                            <span class="input-group-text" data-bs-toggle="tooltip" data-bs-title="Regularizador">μ</span>
+                            <span class="input-group-text" data-bs-toggle="tooltip" data-bs-title="DropOut">μ</span>
                             <input id="regularizer" type="number" class="form-control" value="0.1" max="1" min="0" step="0.1">
                         </div>
 
@@ -66,8 +66,8 @@
                         <hr class="">
 
                         <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                            <button id="btn-stop" type="button" class="btn btn-danger" disabled><i class="bi bi-stop-fill m-2"></i></button>
-                            <button id="btn-start" type="button" class="btn btn-success" disabled><i class="bi bi-play-fill m-2"></i></button>
+                            <button id="btn-stop" type="button" class="btn btn-danger" data-bs-toggle="tooltip" data-bs-title="Detener entrenamiento" disabled><i class="bi bi-stop-fill m-2"></i></button>
+                            <button id="btn-start" type="button" class="btn btn-success" data-bs-toggle="tooltip" data-bs-title="Comenzar entrenamiento" disabled><i class="bi bi-play-fill m-2"></i></button>
                         </div>
                         <!-- <button id="btn-reset" type="button" class="btn btn-secondary" disabled><i class="bi bi-arrow-clockwise m-2"></i></button> -->
                     </div>
@@ -82,11 +82,11 @@
                         <div class="card-header">
                             Progreso
                         </div>
-                        <div class="progress mx-2 mb-1 mt-2">
+                        <div class="progress mx-2 mb-1 mt-2" data-bs-toggle="tooltip" data-bs-title="Progreso de la época">
                             <div id="batch-pgb" class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                             <medium class="justify-content-center d-flex position-absolute w-100 font-weight-bold">EPOCH</medium>
                         </div>
-                        <div class="progress mx-2 mb-2">
+                        <div class="progress mx-2 mb-2" data-bs-toggle="tooltip" data-bs-title="Progreso del entrenamiento global">
                             <div id="epoch-pgb" class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                             <medium class="justify-content-center d-flex position-absolute w-100 font-weight-bold">TOTAL</medium>
                         </div>
@@ -102,7 +102,7 @@
                             </div>
                             <div class="mb-2">
                                 <div class="ratio ratio-1x1">
-                                    <div id="emb-plot"></div>
+                                    <div id="emb-plot" ></div>
                                 </div>
                             </div>
                         </div>
@@ -167,8 +167,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.12.0/dist/tf.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="inc/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.datatables.net/v/bs5/dt-2.0.8/r-3.0.2/datatables.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
