--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
     <title>Recommender System</title>
-    <link href="https://cdn.datatables.net/v/bs5/dt-2.0.8/r-3.0.2/datatables.min.css" rel="stylesheet">
+    <link href="inc/datatables/datatables.min.css" rel="stylesheet">
     <link href="inc/bootstrap/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="inc/bootstrap/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
     
 </head>
@@ -164,12 +164,12 @@
     </div>
 
 
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.12.0/dist/tf.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
+    <script src="inc/jquery/jquery-3.7.1.min.js"></script>
+    <script src="inc/tensorflow/tf.min.js"></script>
+    <script src="inc/papaparse/papaparse.min.js"></script>
     <script src="inc/bootstrap/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.datatables.net/v/bs5/dt-2.0.8/r-3.0.2/datatables.min.js"></script>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="inc/datatables/datatables.min.js"></script>
+    <script src="inc/plotly/plotly-latest.min.js"></script>
 
     <script type="module" src="script.js"></script>
 
