--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <button id="btn-stop" type="button" class="btn btn-danger" data-bs-toggle="tooltip" data-bs-title="Detener entrenamiento" disabled><i class="bi bi-stop-fill m-2"></i></button>
                             <button id="btn-start" type="button" class="btn btn-success" data-bs-toggle="tooltip" data-bs-title="Comenzar entrenamiento" disabled><i class="bi bi-play-fill m-2"></i></button>
                         </div>
-                        <!-- <button id="btn-reset" type="button" class="btn btn-secondary" disabled><i class="bi bi-arrow-clockwise m-2"></i></button> -->
+                        <button id="btn-reset" type="button" class="btn btn-secondary"><i class="bi bi-arrow-clockwise m-2"></i></button>
                     </div>
                 </div>
 
