--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                                         <!-- Modal -->
                                         <div class="modal fade" id="exportModal" tabindex="-1" aria-hidden="true">
                                             <div class="modal-dialog">
-                                            <div class="modal-content">
+                                            <div class="modal-content text-start">
                                                 <div class="modal-header">
                                                 <h1 class="modal-title fs-5"> Configurar exportación</h1>
                                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
