Reparado fin de entrenamiento

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                                     <div id="new-user-buttons" class="col-sm-6 col-lg-4 col-xl-3 mt-3">
                                         <div class="btn-group" role="group">
                                             <button id="btn-usr-load" type="button" class="btn btn-primary" data-bs-toggle="tooltip" data-bs-title="Importar notas"><i class="bi bi-upload m-2"></i></button>
-                                            <div data-bs-toggle="tooltip" data-bs-title="Exportar notas">
+                                            <div data-bs-toggle="tooltip" data-bs-title="Exportar">
                                                 <button id="btn-usr-save-modal" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exportModal" style="border-top-left-radius: 0; border-bottom-left-radius: 0;"><i class="bi bi-download m-2"></i></button>
                                             </div>
                                         </div>
