--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         </div>
 
                         <div class="input-group">
-                            <span class="input-group-text" data-bs-toggle="tooltip" data-bs-title="DropOut">μ</span>
+                            <span class="input-group-text" data-bs-toggle="tooltip" data-bs-title="DropOut">%</span>
                             <input id="regularizer" type="number" class="form-control" value="0.1" max="1" min="0"
                                 step="0.1">
                         </div>
